--- a/japanese/mnews/Makefile
+++ b/japanese/mnews/Makefile
@@ -3,17 +3,16 @@
 # Date created:			23 Sep 1996
 # Whom:				Masafumi NAKANE <max@FreeBSD.ORG>
 #
-# $Id: Makefile,v 1.8 1997/02/15 17:21:26 max Exp $
+# $Id: Makefile,v 1.9 1997/09/14 21:35:02 max Exp $
 #
 
-DISTNAME=	mnews120
-PKGNAME=	ja-mnews-1.20
+DISTNAME=	mnews121
 CATEGORIES=	japanese news
 MASTER_SITES=	ftp://ftp.mei.co.jp/free/Network/news/readers/
 
 MAINTAINER=	kiroh@kh.rim.or.jp
 
-WRKSRC=		${WRKDIR}/mnews-1.20/build
+WRKSRC=		${WRKDIR}/mnews-1.21/build
 MAN1=		mnews.1
 MANLANG=	ja_JP.EUC
 
@@ -21,9 +20,19 @@ DOCS=		FAQ.doc board.doc gnspool.doc mnews.doc prerel.doc	\
 		present.doc read1ST.doc readme.doc update.doc youbin.doc
 SAMPLES=	_mnews.smp jnames.fj jnames.jp jnames.smp jnames.tnn
 
+.ifdef WITH_GNSPOOL
+GNSPOOL=	1
+PKGNAME=	ja-mnews-gnspool-1.21
+.else
+GNSPOOL=	0
+.endif
+PKGNAME?=	ja-mnews-1.21
+
 do-configure:
 	@for f in Makefile site_dep.h ; do \
-	  ${SED} s+@PREFIX@+${PREFIX}+ ${FILESDIR}/$$f.in > ${WRKSRC}/$$f ; done
+	  ${SED} -e s+@PREFIX@+${PREFIX}+ -e s+@GNSPOOL@+${GNSPOOL}+ \
+		${FILESDIR}/$$f.in > ${WRKSRC}/$$f ; \
+	done
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/mnews ${PREFIX}/bin
@@ -43,16 +52,18 @@ do-install:
 
 post-install:
 .if !defined(BATCH)
-	@(while [ X$$domain = X ]; do					\
-	    read -p "Enter the domain name of this host>" domain ;	\
-	  done;								\
-	echo $$domain > ${PREFIX}/lib/mnews/default-domain)
+	@( \
+		while [ X$$domain = X ]; do \
+			read -p "Enter the domain name of this host>" domain; \
+		done; \
+		${ECHO} $$domain > ${PREFIX}/lib/mnews/default-domain \
+	)
 .else
-	@echo "Now, you need to make sure ${PREFIX}/lib/mnews/default-domain"
-	@echo "contains correct domain name."
-	@echo my.domain.com > ${PREFIX}/lib/mnews/default-domain
+	@${ECHO} "Now, you need to make sure ${PREFIX}/lib/mnews/default-domain"
+	@${ECHO} "contains correct domain name."
+	@${ECHO} my.domain.com > ${PREFIX}/lib/mnews/default-domain
 .endif
-	@echo "Please refer to the files in:"
-	@echo "${PREFIX}/share/doc/mnews & ${PREFIX}/share/examples/mnews."
+	@${ECHO} "Please refer to the files in:"
+	@${ECHO} "${PREFIX}/share/doc/mnews & ${PREFIX}/share/examples/mnews."
 
 .include <bsd.port.mk>
