--- a/japanese/mnews/files/Makefile.in
+++ b/japanese/mnews/files/Makefile.in
@@ -4,6 +4,12 @@
 
 
 
+
+
+
+
+
+
 SHELL		= /bin/sh
 ARCH		= _386BSD
 WHEN		= date
@@ -17,12 +23,18 @@ CC_FLAG		= -O -DDONT_HAVE_FTIME
 BIN_DIR		= @PREFIX@/bin
 LIB_DIR		= @PREFIX@/lib
 MAN_DIR		= @PREFIX@/man/ja_JP.EUC
+STRIP		= strip
+#  STRIP	= echo
+WITH_GNSPOOL	= @GNSPOOL@
 
-VERSION		= 1.20
+VERSION		= 1.21
 NET_OPT		=  -DNNTP -DNSPL -DSMTP -DMTAP -DPOP3 -DMSPL
 CONS_OPT	= -DNEWSPOST -DMAILSEND -DJNAMES -DMH -DUCBMAIL -DRMAIL -DMIME -DPAGER -DFCC
 CONF_OPT	= -DCTRL_L -DCOMPLETION -DREF_SORT -DLARGE -DDISPLAY_CTRL -DXOVER
-MOD_OPT		= 
+.if ${WITH_GNSPOOL}
+CONF_OPT	+= -DLOCAL_POST
+.endif
+MOD_OPT		=
 SRC_DIR		= ../src
 COMPAT_DIR	= ../compat
 TCP_DIR		= ../tcplib
@@ -36,7 +48,7 @@ DOC_DIR		= ../doc
 ETC_DIR		= ../etc
 BUILD_DIR	= ../build
 ARC_DIR		= mnews-${VERSION}
-INC_FLAG	= -I. -I${COMPAT_DIR} -I${TCP_DIR} 		-I${NNTP_DIR} -I${SMTP_DIR} -I${POP3_DIR} 		-I${KANJI_DIR} -I${MIME_DIR} -I${TERM_DIR} -I${SRC_DIR}
+INC_FLAG	= -I. -I${COMPAT_DIR} -I${TCP_DIR} -I${NNTP_DIR} -I${SMTP_DIR} -I${POP3_DIR} -I${KANJI_DIR} -I${MIME_DIR} -I${TERM_DIR} -I${SRC_DIR}
 
 
 CPP_FLAG1	= ${INC_FLAG} -DMNEWS -DJIS_INPUT ${CONF_OPT} -D${ARCH}
@@ -55,9 +67,9 @@ MAILSEND_OBJ	= mailsend.o
 
 
 
+JNAMES_OBJ	= jnhash.o
 
 
-JNAMES_OBJ	= jnames.o
 
 
 
@@ -79,7 +91,7 @@ PAGER_OBJ	= pager.o
 FCC_OBJ		= fcc.o
 
 
-MIME_OBJ	= mimelib.o
+MIME_OBJ	= mimepart.o mimelib.o
 
 
 
@@ -94,8 +106,11 @@ OBJ		= ${BASE_OBJ} ${OPT_OBJ}
 C_OBJ   	= config.o
 COMPAT_INC	= ${COMPAT_DIR}/compat.h
 COMPAT_SRC	= ${COMPAT_DIR}/compat.c
-TCP_INC		= ${TCP_DIR}/tcplib.h  ${TCP_DIR}/field.h
-TCP_SRC		= ${TCP_DIR}/tcplib.c
+TCP_INC		= ${TCP_DIR}/field.h 		${TCP_DIR}/tcplib.h 		${TCP_DIR}/inetbios.h
+
+
+TCP_SRC		= ${TCP_DIR}/tcplib.c 		${TCP_DIR}/inetbios.c
+
 NNTP_INC	= ${NNTP_DIR}/nntplib.h
 NNTP_SRC	= ${NNTP_DIR}/nntplib.c
 SMTP_INC	= ${SMTP_DIR}/smtplib.h
@@ -103,33 +118,29 @@ SMTP_SRC	= ${SMTP_DIR}/smtplib.c
 POP3_INC	= ${POP3_DIR}/pop3lib.h
 POP3_SRC	= ${POP3_DIR}/pop3lib.c
 KANJI_INC	= ${KANJI_DIR}/kanjilib.h
+ 
 KANJI_SRC	= ${KANJI_DIR}/kanjilib.c
+ 
 TERM_INC	= ${TERM_DIR}/termlib.h
-TERM_SRC	= ${TERM_DIR}/termlib.c
-TERM_SRC2	= ${TERM_DIR}/termdos.c
+TERM_SRC	= ${TERM_DIR}/termlib.c 		${TERM_DIR}/termdos.c
+
 MIME_INC	= ${MIME_DIR}/mimelib.h
 MIME_SRC	= ${MIME_DIR}/mimelib.c
-SRC		= ${COMPAT_SRC} 		${TCP_SRC} 		${NNTP_SRC} 		${SMTP_SRC} 		${POP3_SRC} 		${KANJI_SRC} 		${TERM_SRC} 		${TERM_SRC2} 		${MIME_SRC} 		${SRC_DIR}/mnews.c 		${SRC_DIR}/group.c 		${SRC_DIR}/article.c 		${SRC_DIR}/mark.c 		${SRC_DIR}/mh.c 		${SRC_DIR}/ucbmail.c 		${SRC_DIR}/rmail.c 		${SRC_DIR}/board.c 		${SRC_DIR}/newspost.c 		${SRC_DIR}/mailsend.c 		${SRC_DIR}/pager.c 		${SRC_DIR}/fcc.c 		${SRC_DIR}/inetbios.c 		${SRC_DIR}/jnames.c 		${SRC_DIR}/jnhash.c 		${SRC_DIR}/youbin.c
-# 136 "temp.c"
-INC		= ${COMPAT_INC} 		${TCP_INC} 		${NNTP_INC} 		${SMTP_INC} 		${POP3_INC} 		${KANJI_INC} 		${TERM_INC} 		${MIME_INC} 		${SRC_DIR}/mnews.h 		${SRC_DIR}/group.h 		${SRC_DIR}/article.h 		${SRC_DIR}/mark.h 		${SRC_DIR}/mh.h 		${SRC_DIR}/ucbmail.h 		${SRC_DIR}/rmail.h 		${SRC_DIR}/board.h 		${SRC_DIR}/newspost.h 		${SRC_DIR}/mailsend.h 		${SRC_DIR}/pager.h 		${SRC_DIR}/fcc.h 		${SRC_DIR}/inetbios.h 		${BUILD_DIR}/site_DOS.h 		${BUILD_DIR}/site_X68.h
-# 159 "temp.c"
+SRC		= ${COMPAT_SRC} 		${TCP_SRC} 		${NNTP_SRC} 		${SMTP_SRC} 		${POP3_SRC} 		${KANJI_SRC} 		${TERM_SRC} 		${MIME_SRC} 		${SRC_DIR}/mnews.c 		${SRC_DIR}/group.c 		${SRC_DIR}/article.c 		${SRC_DIR}/mark.c 		${SRC_DIR}/mh.c 		${SRC_DIR}/ucbmail.c 		${SRC_DIR}/rmail.c 		${SRC_DIR}/board.c 		${SRC_DIR}/newspost.c 		${SRC_DIR}/mailsend.c 		${SRC_DIR}/pager.c 		${SRC_DIR}/fcc.c 		${SRC_DIR}/mimepart.c 		${SRC_DIR}/jnames.c 		${SRC_DIR}/jnhash.c 		${SRC_DIR}/youbin.c
+# 148 "temp.c"
+INC		= ${COMPAT_INC} 		${TCP_INC} 		${NNTP_INC} 		${SMTP_INC} 		${POP3_INC} 		${KANJI_INC} 		${TERM_INC} 		${MIME_INC} 		${SRC_DIR}/mnews.h 		${SRC_DIR}/group.h 		${SRC_DIR}/article.h 		${SRC_DIR}/mark.h 		${SRC_DIR}/mh.h 		${SRC_DIR}/ucbmail.h 		${SRC_DIR}/rmail.h 		${SRC_DIR}/board.h 		${SRC_DIR}/newspost.h 		${SRC_DIR}/mailsend.h 		${SRC_DIR}/pager.h 		${SRC_DIR}/fcc.h 		${SRC_DIR}/mimepart.h 		${BUILD_DIR}/site_DOS.h 		${BUILD_DIR}/site_X68.h
+# 171 "temp.c"
 C_SRC		= ${SRC_DIR}/config.c
 C_INC		= ${SRC_DIR}/config.h
 SITE		= ${BUILD_DIR}/site_dep.h
-DOC1		= ${DOC_DIR}/mnews.doc 		${DOC_DIR}/mnews.1 		${DOC_DIR}/read1ST.doc 		${DOC_DIR}/readme.doc 		${DOC_DIR}/update.doc 		${DOC_DIR}/FAQ.doc 		${DOC_DIR}/board.doc 		${DOC_DIR}/present.doc
-
-
-
-
-
-
-
+DOC1		= ${DOC_DIR}/mnews.doc 		${DOC_DIR}/mnews.1 		${DOC_DIR}/read1ST.doc 		${DOC_DIR}/readme.doc 		${DOC_DIR}/update.doc 		${DOC_DIR}/FAQ.doc 		${DOC_DIR}/board.doc 		${DOC_DIR}/present.doc 		${DOC_DIR}/gnspool.doc 		${DOC_DIR}/youbin.doc
+# 184 "temp.c"
 DOC2		= ${DOC_DIR}/prerel.doc
-ETC		= ${ETC_DIR}/board.sh 		${ETC_DIR}/board.csh 		${ETC_DIR}/combine.sh 		${ETC_DIR}/_mnews.smp 		${ETC_DIR}/nemacs-3.3.2.patch 		${ETC_DIR}/mule-2.3@19.28.patch 		${ETC_DIR}/kterm-color.termcap 		${ETC_DIR}/kterm-color.terminfo 		${ETC_DIR}/jnames.smp 		${ETC_DIR}/jnames.fj 		${ETC_DIR}/jnames.jp 		${ETC_DIR}/jnames.tnn
-# 183 "temp.c"
+ETC		= ${ETC_DIR}/board.sh 		${ETC_DIR}/board.csh 		${ETC_DIR}/combine.sh 		${ETC_DIR}/_mnews.smp 		${ETC_DIR}/"nemacs-3.3.2.patch" 		${ETC_DIR}/"mule-2.3@19.28.patch" 		${ETC_DIR}/kterm-color.termcap 		${ETC_DIR}/kterm-color.terminfo 		${ETC_DIR}/jnames.smp 		${ETC_DIR}/jnames.fj 		${ETC_DIR}/jnames.jp 		${ETC_DIR}/jnames.tnn
+# 197 "temp.c"
 INFO		= inst_inf.h
-MAKE1		= config.sh config.jsh Makefile.obj
-MAKE2		= Makefile.src Makefile.MSC Makefile.GCC Makefile.X68 		Makefile.TCC Makefile.B16 Makefile.B32
+MAKE1		= convert.bat config.sh config.jsh Makefile.obj
+MAKE2		= Makefile.src Makefile.MSC Makefile.GCC Makefile.X68 		Makefile.TCC Makefile.B16 Makefile.B32 Makefile.OS2
 
 SRC_DIST	= mnews_src.tar
 OBJ_DIST	= mnews_${ARCH}_obj.tar
@@ -141,7 +152,7 @@ obj: ${OBJ}
 
 ${EXE}: ${BASE_OBJ} ${OPT_OBJ} ${C_OBJ}
 	${CC} ${CC_FLAG} -o $@ ${BASE_OBJ} ${OPT_OBJ} ${C_OBJ} ${LIBS}
-	strip $@
+	${STRIP} $@
 	chmod 755 $@
 	chmod 644 ${DOC1} ${DOC2}
 
@@ -170,29 +181,39 @@ ${INFO}: ${C_SRC} ${C_INC} ${SITE} ${SRC} ${INC}
 ${SITE}:
 	@echo "You must run config.sh or config.jsh first."
 
-compat.o: ${INC} ${COMPAT_SRC}
-	${CC} ${C_FLAG2} -c ${COMPAT_SRC}
+compat.o: ${COMPAT_INC} ${COMPAT_DIR}/compat.c
+	${CC} ${C_FLAG2} -c ${COMPAT_DIR}/compat.c
 
-tcplib.o: ${COMPAT_INC} ${TCP_INC} ${TCP_SRC}
-	${CC} ${C_FLAG1} ${NET_OPT} -c ${TCP_SRC}
+tcplib.o: ${COMPAT_INC} ${TCP_INC} ${TCP_DIR}/tcplib.c
+	${CC} ${C_FLAG1} ${NET_OPT} -c ${TCP_DIR}/tcplib.c
 
-nntplib.o: ${COMPAT_INC} ${TCP_INC} ${NNTP_INC} ${NNTP_SRC}
-	${CC} ${C_FLAG1} ${NET_OPT} -c ${NNTP_SRC}
+nntplib.o: ${COMPAT_INC} ${TCP_INC} ${NNTP_INC} ${NNTP_DIR}/nntplib.c
+	${CC} ${C_FLAG1} ${NET_OPT} -c ${NNTP_DIR}/nntplib.c
 
-smtplib.o: ${COMPAT_INC} ${TCP_INC} ${SMTP_INC} ${SMTP_SRC}
-	${CC} ${C_FLAG1} ${NET_OPT} -c ${SMTP_SRC}
+smtplib.o: ${COMPAT_INC} ${TCP_INC} ${SMTP_INC} ${SMTP_DIR}/smtplib.c
+	${CC} ${C_FLAG1} ${NET_OPT} -c ${SMTP_DIR}/smtplib.c
 
-pop3lib.o: ${COMPAT_INC} ${TCP_INC} ${POP3_INC} ${POP3_SRC}
-	${CC} ${C_FLAG1} ${NET_OPT} -c ${POP3_SRC}
+pop3lib.o: ${COMPAT_INC} ${TCP_INC} ${POP3_INC} ${POP3_DIR}/pop3lib.c
+	${CC} ${C_FLAG1} ${NET_OPT} -c ${POP3_DIR}/pop3lib.c
 
-kanjilib.o: ${COMPAT_INC} ${KANJI_INC} ${KANJI_SRC}
-	${CC} ${C_FLAG1} -DDELETE_X0212 -c ${KANJI_SRC}
+ 
 
-termlib.o: ${COMPAT_INC} ${TERM_INC} ${TERM_SRC}
-	${CC} ${C_FLAG2} -c ${TERM_SRC}
 
-mimelib.o: ${INC} ${MIME_SRC}
-	${CC} ${C_FLAG2} -c ${MIME_SRC}
+
+
+kanjilib.o: ${COMPAT_INC} ${KANJI_INC} ${KANJI_DIR}/kanjilib.c
+	${CC} ${C_FLAG1} -DDELETE_X0212 -c ${KANJI_DIR}/kanjilib.c
+
+ 
+
+
+
+
+termlib.o: ${COMPAT_INC} ${TERM_INC} ${TERM_DIR}/termlib.c
+	${CC} ${C_FLAG2} -c ${TERM_DIR}/termlib.c
+
+mimelib.o: ${COMPAT_INC} ${MIME_INC} ${MIME_DIR}/mimelib.c
+	${CC} ${C_FLAG2} -c ${MIME_DIR}/mimelib.c
 
 jnames.o: ${SRC_DIR}/jnames.c
 	${CC} ${C_FLAG2} -c ${SRC_DIR}/jnames.c
@@ -239,6 +260,9 @@ pager.o: ${INC} ${SRC_DIR}/pager.c
 fcc.o: ${INC} ${SRC_DIR}/fcc.c
 	${CC} ${C_FLAG2} -c ${SRC_DIR}/fcc.c
 
+mimepart.o: ${INC} ${SRC_DIR}/mimepart.c
+	${CC} ${C_FLAG2} -c ${SRC_DIR}/mimepart.c
+
 install: all
 	cp ${EXE} ${BIN_DIR}
 	chmod 755 ${BIN_DIR}/${EXE}
@@ -281,12 +305,12 @@ remove:
 	-${RM} ${RM_FLAG} ${EXE} ${OBJ} ${C_OBJ} ${INFO}
 
 src_dist:
-	(cd ../.. ; tar cvfh ${SRC_DIST} 		${ARC_DIR}/build/Makefile.* 		${ARC_DIR}/build/site_DOS.h 		${ARC_DIR}/build/site_X68.h 		${ARC_DIR}/build/config.sh 		${ARC_DIR}/build/config.jsh 		${ARC_DIR}/compat ${ARC_DIR}/doc ${ARC_DIR}/etc 		${ARC_DIR}/kanjilib ${ARC_DIR}/mimelib ${ARC_DIR}/termlib 		${ARC_DIR}/nntplib ${ARC_DIR}/smtplib ${ARC_DIR}/pop3lib 		${ARC_DIR}/tcplib ${ARC_DIR}/src ; 	gzip -f ${SRC_DIST} )
-# 348 "temp.c"
+	(cd ../.. ; tar cvfh ${SRC_DIST} 		${ARC_DIR}/build/Makefile.* 		${ARC_DIR}/build/site_DOS.h 		${ARC_DIR}/build/site_X68.h 		${ARC_DIR}/build/config.sh 		${ARC_DIR}/build/config.jsh 		${ARC_DIR}/build/convert.bat 		${ARC_DIR}/compat ${ARC_DIR}/doc ${ARC_DIR}/etc 		${ARC_DIR}/kanjilib ${ARC_DIR}/mimelib ${ARC_DIR}/termlib 		${ARC_DIR}/nntplib ${ARC_DIR}/smtplib ${ARC_DIR}/pop3lib 		${ARC_DIR}/tcplib ${ARC_DIR}/src ; 	gzip -f ${SRC_DIST} )
+# 376 "temp.c"
 
 obj_dist: ${OBJ}
 	(cd ../.. ; tar cvfh ${OBJ_DIST} 		${ARC_DIR}/build/Makefile.obj 		${ARC_DIR}/build/site_DOS.h 		${ARC_DIR}/build/site_X68.h 		${ARC_DIR}/build/config.sh 		${ARC_DIR}/build/config.jsh 		${ARC_DIR}/build/mnews.o 		${ARC_DIR}/build/group.o 		${ARC_DIR}/build/article.o 		${ARC_DIR}/build/mark.o 		${ARC_DIR}/build/compat.o 		${ARC_DIR}/build/tcplib.o 		${ARC_DIR}/build/nntplib.o 		${ARC_DIR}/build/smtplib.o 		${ARC_DIR}/build/pop3lib.o 		${ARC_DIR}/build/kanjilib.o 		${ARC_DIR}/build/termlib.o 		${ARC_DIR}/build/newspost.o 		${ARC_DIR}/build/mailsend.o 		${ARC_DIR}/build/jnames.o 		${ARC_DIR}/build/jnhash.o 		${ARC_DIR}/build/mh.o 		${ARC_DIR}/build/ucbmail.o 		${ARC_DIR}/build/rmail.o 		${ARC_DIR}/build/board.o 		${ARC_DIR}/build/pager.o 		${ARC_DIR}/build/fcc.o 		${ARC_DIR}/build/mimelib.o 		${ARC_DIR}/compat/compat.h 		${ARC_DIR}/doc ${ARC_DIR}/etc 		${ARC_DIR}/termlib/termlib.h 		${ARC_DIR}/src/config.[ch] ; 	gzip -f ${OBJ_DIST} )
-# 383 "temp.c"
+# 411 "temp.c"
 
 bin_dist: ${EXE}
 	(cd ../.. ; tar cvfh ${EXE_DIST} 		${ARC_DIR}/doc ${ARC_DIR}/etc 		${ARC_DIR}/build/${EXE} ; 	gzip -f ${EXE_DIST} )
