--- a/japanese/mnews/files/site_dep.h.in
+++ b/japanese/mnews/files/site_dep.h.in
@@ -3,7 +3,7 @@
  *  System      : Mini News Reader
  *  Sub system  : Site depend define
  *  File        : site_dep.h
- *  Version     : 1.20
+ *  Version     : 1.21
  *
  *  NOTE:
  *   This file made by config.sh program.
@@ -19,11 +19,14 @@
 /*
 #define	DOMAIN_NAME	"your-domain-name"
 */
-#define	DOMAIN_FILE	"@PREFIX@/lib/mnews/default-domain"
+#define	DEFAULT_INIT_FILE	"@PREFIX@/lib/mnews/mnews_setup"
+#define	DOMAIN_FILE		"@PREFIX@/lib/mnews/default-domain"
 #define	NNTP_SERVER_FILE	"@PREFIX@/lib/mnews/default-server"
 #define	SMTP_SERVER_FILE	"@PREFIX@/lib/mnews/default-smtpsv"
 #define	POP3_SERVER_FILE	"@PREFIX@/lib/mnews/default-pop3sv"
 #define	YOUBIN_SERVER_FILE	"@PREFIX@/lib/mnews/default-mailsv"
+#define	ORGAN_FILE		"@PREFIX@/news/lib/organization"
+
 #define	EXT_PAGER	"@PREFIX@/bin/jless"
 #define	PRINT_CODE	EUC_CODE
 #define	DEFAULT_CODE	EUC_CODE
@@ -32,16 +35,34 @@
 #define	INPUT_CODE	ASCII_CODE
 #define	FCC_CODE	ASCII_CODE
 #define	PIPE_CODE	ASCII_CODE
-#define	EDITOR_COMMAND	"@PREFIX@/bin/mule -nw"
-#define	SEND_COMMAND	"/usr/sbin/sendmail -t -om -oi"
-#define	POST_COMMAND	"/usr/lib/news/inews -h"
+#define	LPR_CODE	ASCII_CODE
+#define EDITOR_COMMAND	"@PREFIX@/bin/mule -nw"
+#define	LPR_COMMAND	"lpr"
 #define	MH_COMMAND_PATH	"@PREFIX@/bin"
 #define	JNAMES_DB	"@PREFIX@/lib/jnames"
-#define	NEWS_SPOOL	"/usr/spool/news"
-#define	NEWS_LIB	"/usr/lib/news"
+#if @GNSPOOL@
+#define	SEND_COMMAND	"@PREFIX@/bin/gnmail"
+#define	POST_COMMAND	"@PREFIX@/bin/gninews"
+#define	NEWS_SPOOL	"/var/spool/gnspool"
+#else /*GNSPOOL*/
+#define	SEND_COMMAND	"/usr/sbin/sendmail -t -om -oi"
+#define	POST_COMMAND	"@PREFIX@/bin/inews -h"
+#define	NEWS_SPOOL	"/var/spool/news"
+#endif /*GNSPOOL*/
+#define	NEWS_LIB	"@PREFIX@/news/lib"
 #define	MAIL_SPOOL	"/var/mail"
 #define	BOARD_SPOOL	"/var/board"
 #define	TMP_DIR		"/tmp"
+
+/*
+ * MIME multimedia extension
+ */
+
+#define	MPEG_COMMAND	""
+#define	JPEG_COMMAND	""
+#define	GIF_COMMAND	""
+#define	AUDIO_COMMAND	""
+#define	PS_COMMAND	"DEFAULT_PS_COMMAND"
 
 #define	NNTP_MODE	1
 #define	SMTP_MODE	0
