--- a/japanese/vftool/Makefile
+++ b/japanese/vftool/Makefile
@@ -3,7 +3,7 @@
 # Date created:		12 September 1997
 # Whom:			KIRIYAMA Kazuhiko <kiri@kiri.toba-cmt.ac.jp>
 #
-# $Id: Makefile,v 1.1.1.1 1998/02/28 05:18:59 itojun Exp $
+# $Id: Makefile,v 1.2 1998/03/04 07:28:33 asami Exp $
 #
 
 DISTNAME=	vftool-1.2
@@ -17,6 +17,8 @@ BUILD_DEPENDS=	${JFMDIR}/goth10.tfm:${PORTSDIR}/japanese/ptex-${JACODE} \
 		${AFMDIR}/GothicBBB-Medium-H:${PORTSDIR}/japanese/japaneseAFM \
 		${GOTTFMDIR}/dgjgreek10.tfm:${PORTSDIR}/japanese/jtex209-${JTEX} \
 		${PKDIR}/dmjsy10.${RESOLUTION}pk:${PORTSDIR}/japanese/pkfonts
+
+BROKEN=		build
 
 ALL_TARGET=	n2a a2n a2bk p2pn tjsy tjsypk rot
 SCRIPTS_ENV=	SED=${SED} \
